Mise a jour des services d'achat